-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.889 2011-03-22 15:34:27 remko Exp $
-----------------------------------------------------------------------------------------

2011-03-22	remko
	* gmt_plot.c:		Make sure PSL_* text/dimensions are set when plotting
				no annotation but still a plot title

2011-03-21	jluis
	* gmt_gdalread.h:	Add a new member to GDALREAD_CTRL struct to host the pointer 
				to the pre-allocated grid array.
	* gmt_gdalread.c:	Use pre-allocated *grid array if it was transmitted. Note that
				in this case there is no test if pre-allocated mem is enough.
	* gmt_customio.c:	GMT_gdal_read_grd sends in the pre-allocated *grid array.

2011-03-21	pwessel
	* dbase/grdraster_func.c:	Better testing and return of errors.
	* gmt_grdio.c:		Assign default pad in GMT_create_grid.
	* gmt_plot.c:		Avoid writing unneeded PSL_* text/dimension stuff when
				no text will actually be plotted (e.g., -G0g5).

2011-03-19	jluis
	* gmt_gdalread.c:	Add code to do pixel interleaving of char arrays.
				Handle new complex choice of 0,1,2
	* gmt_gdalread.h:	Add two members to the GDALREAD_CTRL struct to deal with Pixel 
				interleaving and put data into complex arrays 
	* gmt_customio.c:	GMT_gdal_read_grd now handles the complex case too.

2011-03-18	pwessel
	* pstext_func.c:	Added -Gc to use text for setting up clipping only.
	* gmt_support.c:	Added +e to contlabel options to use text for setting up clipping only
				and delay plotting the text until psclip -Cs|c.  Affects grdcontour,
				pscontour, and psxy -Sq text placement.
	* psclip_func.c:	Added -Cc|s to terminate text-based clip path and plot the text for
				either curved or straight text paths.
	* grdfft_func.c:	Let -E optionally use -G to set output file name [Default is stdout].
	* gmt_grdio.c:		Added GMT_init_complex to centralize setting of stride (1 or 2)
				and offset (0 = real, 1 = imag).

2011-03-17	pwessel